--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.5",
   "homepage": "https://github.com/plyfe/ember-json-api",
   "authors": [
+    "Dali Zheng <dali@series.ac>",
     "Stefan Penner <stefan.penner@gmail.com>"
   ],
   "license": "MIT",
