--- a/package.json
+++ b/package.json
@@ -21,15 +21,10 @@
   },
   "scripts": {
     "postinstall": "npm install --save-dev broccoli && npm install --global broccoli-cli",
-    "test": "rm -rf test_build && ./node_modules/broccoli-cli/bin/broccoli build test_build && phantomjs test_build/tests/runner.js test_build/tests/index.html",
-    "test-server": "testem",
-    "build": "rm -rf dist && BROCCOLI_ENV=production broccoli build dist"
-  },
-  "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.4.4"
+    "test": "rm -rf test_build && ./node_modules/broccoli-cli/bin/broccoli build test_build && phantomjs test_build/tests/runner.js test_build/tests/index.html && rm -rf test_build",
+    "test-server": "broccoli serve",
+    "build": "rm -rf dist && BROCCOLI_ENV=production broccoli build dist",
+    "serve": "broccoli serve"
   },
   "devDependencies": {
     "bower": "",
