--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.8",
   "homepage": "http://github.com/kurko/ember-json-api",
   "author": "Dali Zheng",
-  "contributors": [{
-    "name": "Alexandre de Oliveira",
-    "email": "chavedomundo@gmail.com"
-  }, {
-    "name": "Stefan Penner",
-    "email": "stefan.penner@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "Alexandre de Oliveira",
+      "email": "chavedomundo@gmail.com"
+    },
+    {
+      "name": "Stefan Penner",
+      "email": "stefan.penner@gmail.com"
+    }
+  ],
   "main": "dist/json_api_adapter.js",
   "repository": {
     "type": "git",
@@ -37,6 +40,7 @@
     "broccoli-merge-trees": "^0.1.3",
     "broccoli-static-compiler": "^0.1.4",
     "broccoli-template": "^0.1.0",
+    "broccoli-uglify-js": "^0.1.3",
     "testem": "^0.6.16"
   },
   "license": "MIT"
