--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "postinstall": "npm install --save-dev broccoli && npm install --global broccoli-cli",
-    "test": "rm -rf test_build && ./node_modules/broccoli-cli/bin/broccoli build test_build && phantomjs test_build/tests/runner.js test_build/tests/index.html && rm -rf test_build",
+    "test": "rm -rf test_build && ./node_modules/broccoli-cli/bin/broccoli build test_build && phantomjs test_build/tests/runner.js test_build/tests/index.html",
     "test-server": "broccoli serve",
     "build": "rm -rf dist && BROCCOLI_ENV=production broccoli build dist",
     "serve": "broccoli serve"
