--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
       "email": "stefan.penner@gmail.com"
     }
   ],
-  "main": "dist/json_api_adapter.js",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember test"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/kurko/ember-json-api"
@@ -22,26 +30,27 @@
   "bugs": {
     "url": "http://github.com/kurko/ember-json-api/issues"
   },
-  "scripts": {
-    "postinstall": "npm install --save-dev broccoli && npm install --global broccoli-cli",
-    "test": "rm -rf test_build && ./node_modules/broccoli-cli/bin/broccoli build test_build && phantomjs test_build/tests/runner.js test_build/tests/index.html",
-    "test-server": "broccoli serve",
-    "build": "rm -rf dist && BROCCOLI_ENV=production broccoli build dist",
-    "serve": "broccoli serve"
+  "engines": {
+    "node": ">= 0.10.0"
   },
+  "license": "MIT",
   "devDependencies": {
-    "bower": "",
-    "broccoli": "^0.12.3",
-    "broccoli-bower": "^0.2.0",
-    "broccoli-cli": "0.0.1",
-    "broccoli-env": "^0.0.1",
-    "broccoli-es6-concatenator": "^0.1.4",
-    "broccoli-es6-transpiler": "^0.1.0",
-    "broccoli-merge-trees": "^0.1.3",
-    "broccoli-static-compiler": "^0.1.4",
-    "broccoli-template": "^0.1.0",
-    "broccoli-uglify-js": "^0.1.3",
-    "testem": "^0.6.16"
+    "body-parser": "^1.2.0",
+    "broccoli-asset-rev": "0.3.0",
+    "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "ember-cli": "0.0.47",
+    "ember-cli-content-security-policy": "0.1.3",
+    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.0.2",
+    "ember-cli-qunit": "0.1.0",
+    "ember-data": "1.0.0-beta.10",
+    "express": "^4.8.5",
+    "glob": "^4.0.5"
   },
-  "license": "MIT"
+  "keywords": [
+    "ember-addon"
+  ],
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
+  }
 }
