--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "ember-data": "v1.0.0-beta.10",
-    "ember": "v1.7.0"
+    "ember": "v1.7.0",
+    "loader.js": "stefanpenner/loader.js#1.0.1"
   },
   "devDependencies": {
     "qunit": "~1.14.0",
