--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
   "bugs": {
     "url": "http://github.com/kurko/ember-json-api/issues"
   },
+  "keywords": [
+    "ember",
+    "ember-addon"
+  ],
+  "ember-addon": {
+    "main": "ember-addon-main.js"
+  },
   "scripts": {
-    "postinstall": "npm install --save-dev broccoli && npm install --global broccoli-cli",
-    "build": "rm -rf dist && BROCCOLI_ENV=production broccoli build dist",
+    "build": "rm -rf dist && BROCCOLI_ENV=production ./node_modules/.bin/broccoli build dist",
     "build-test": "rm -rf test_build && ./node_modules/broccoli-cli/bin/broccoli build test_build",
     "test": "npm run build-test && phantomjs test_build/tests/runner.js test_build/tests/index.html && rm -rf test_build",
-    "test-server": "broccoli serve",
-    "serve": "broccoli serve"
+    "test-server": "./node_modules/.bin/broccoli serve",
+    "serve": "./node_modules/.bin/broccoli serve"
   },
   "devDependencies": {
     "bower": "",
@@ -42,6 +48,7 @@
     "broccoli-static-compiler": "0.1.4",
     "broccoli-template": "0.1.0",
     "broccoli-uglify-js": "0.1.3",
+    "ember-cli": "^0.1.1",
     "testem": "0.6.16"
   },
   "license": "MIT"
