--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       "email": "stefan.penner@gmail.com"
     }
   ],
-  "main": "dist/json_api_adapter.js",
+  "main": "dist/json-api-adapter.js",
   "repository": {
     "type": "git",
     "url": "http://github.com/kurko/ember-json-api"
