support Ember 1.0.0-beta.15

--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "ember-data": "v1.0.0-beta.10",
-    "ember": "v1.7.0",
+    "ember-data": "v1.0.0-beta.15",
+    "ember": "v1.10.0",
+    "handlebars": "v2.0.0",
     "loader.js": "stefanpenner/loader.js#1.0.1"
   },
   "devDependencies": {
